--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,6 @@ snapshotserver/snapshotserver
 .vscode
 test-reports/
 docker-test-reports/
+bootstrap/config.json
+bootstrap/node_modules
+bootstrap/test.out
