--- a/changeserver/changeserver-api.yaml
+++ b/changeserver/changeserver-api.yaml
@@ -42,6 +42,14 @@ paths:
             are sorted by sequence regardless of scope.
           required: true
           type: string
+        - name: selector
+          in: query
+          description:
+            Alias for "scope" query parameter with the same usage.
+            Completely interchangeable with "scope", which is no longer
+            required if "selector" param is present.
+          required: false
+          type: string
         - name: snapshot
           in: query
           description:
